--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,40 +17,57 @@ body {
     margin: 3px;
 }
 
-main {
-    width: 70%;
-    min-width: 500px;
-}
-h1 {
+.text-center {
     text-align: center;
 }
 
-input {
-    width: 90%;
-    margin-bottom: 2px;
+main {
+    width: 70%;
+    min-width: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+h1 {
+    text-align: center;
 }
 
 hr {
     border: 2px solid var(--secondary-color);
 }
 
-a{
+a {
     color: var(--secondary-color);
 }
 /* form section */
 
-.form-section {
+.form-section { 
+    border: 2px solid var(--secondary-color);
+    width: 60%;
+    padding: 12px 0;
+    border-radius: 8px;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .form {
     display: grid;
-    grid-template-columns: 1fr 8fr;
+    grid-template-columns: 1fr 2fr;
+}
+
+label {
+    /* background-color: green; */
+    width: max-content;
+}
+input {
+    max-width: 150px;
+    width: 100%;
+    border-radius: 4px;
 }
 input:focus {
     border: 2px solid var(--secondary-color);
-    border-radius: 2px;
     outline: 0;
 }
 .err {
@@ -61,4 +78,21 @@ input:focus {
     width: 100%;
     display: flex;
     justify-content: center;
+}
+
+button {
+    background-color: black;
+    color: white;
+    padding: 4px 12px 4px 12px;
+    border-radius: 4px;
+    border: 2px solid var(--secondary-color);
+    cursor: pointer;
+}
+button:hover {
+    background-color: var(--secondary-color);
+}
+#EmailErr,
+#passErr {
+    max-height: 14px;
+    font-size: 12px;
 }
