--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -56,3 +56,24 @@ a {
 a:hover {
     cursor: pointer;
 }
+
+.followersList,
+.followingList {
+    background-color: black;
+    border: 1px solid var(--secondary-color);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 40%;
+    height: 70%;
+    border-radius: 3%;
+    padding: 8px;
+    flex-direction: column;
+    display: none;
+}
+
+#followers,
+#following {
+    cursor: pointer;
+}
