--- a/public/css/commentCss.css
+++ b/public/css/commentCss.css
@@ -1,3 +1,5 @@
+@import url("/css/default.css");
+
 body {
     background-color: black;
     color: white;
@@ -8,7 +10,6 @@ body {
     --background-color: black;
 }
 main {
-    width: 700px;
     margin: 0 auto;
 }
 .tweet {
@@ -17,6 +18,10 @@ main {
 .comment {
     border: 2px solid var(--secondary-color);
     border-top: 0;
+}
+
+.comment > * {
+    padding: 3px;
 }
 
 .form-section {
@@ -30,8 +35,54 @@ form {
 }
 form > input {
     flex: 1;
+    outline: none;
+    padding: 1%;
+}
+form > button {
+    cursor: pointer;
+    background-color: black;
+    color: var(--primary-color);
+    border: 2px solid var(--secondary-color);
+    border-top: 0;
 }
 a {
     color: var(--secondary-color);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+main {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+}
+
+/* nav related */
+
+.navigation {
+    position: sticky;
+    top: 0;
+    gap: 20px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 0;
+    border-right: 2px solid var(--secondary-color);
+    gap: 5rem;
+}
+
+.nav-content {
+    text-align: center;
+    width: 100%;
+    text-transform: capitalize;
+    padding: 1.1rem 0;
+}
+.nav-content > a {
+    color: var(--primary-color);
+    text-decoration: none;
+}
+.nav-content:hover {
+    background-color: var(--secondary-color);
     cursor: pointer;
 }
