--- a/public/css/style-home.css
+++ b/public/css/style-home.css
@@ -79,7 +79,6 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-bottom: 2px solid var(--secondary-color);
     border-top: 2px solid var(--secondary-color);
     margin-bottom: 4%;
 }
@@ -126,8 +125,12 @@ form > button:hover,
 
 .tweet {
     border-top: 2px solid var(--secondary-color);
+    padding: 3px;
 }
 
+.tweet > * {
+    padding: 3px;
+}
 .tweet:last-child {
     border: 2px solid var(--secondary-color);
 }
@@ -146,17 +149,41 @@ form > button:hover,
 }
 
 .search > form {
-    height: 10.2%;
+    height: 11.3rem;
     display: flex;
     flex-direction: row;
     padding: 3%;
-
+    border: none;
+    /* border-bottom: 2px solid var(--secondary-color); */
     gap: 3%;
 }
-
+.search {
+    border: 2px solid var(--secondary-color);
+    border-left: none;
+}
 .search-form > * {
     margin: 0;
     padding: 0;
     height: 20%;
 }
 /* search */
+
+.settings > div {
+    padding-top: 3%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.settings > div > a {
+    color: var(--primary-color);
+    display: block;
+    border: 1px solid var(--secondary-color);
+    border-radius: 12px;
+    padding: 12px;
+}
+.settings > div > a:hover {
+    background-color: var(--secondary-color);
+}
