made login page responsive

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -107,6 +107,10 @@ button:hover {
     justify-content: center;
 }
 
+.middle a:hover{
+    background-color: var(--secondary-color);
+}
+
 .click {
     display: block;
     text-decoration: none;
